NJ - 02/10/04 - Deleting masks_ircbp.py - the system has some flaws etc.
NJ - 02/10/04 - Added new hostmask system, I KNOW ANOTHER ONE! - This one works a DREAM! - Uses fnmatch which I added to the imports, for a FS Matching checker it works SUPER well on plain text!
NJ - 02/10/04 - Fixed bug #2556 (Comparing strings may fail because of case)
NJ - 03/10/04 - Added more comments so that it's more spaced out where the !say commands are etc
NJ - 03/10/04 - Started to implement the ability to have multiple prefixes, sadly i realised that my way of checking will cause problems.  The call for it has being commented out and put back to the original but it is something we should look at making better in the future.
BP - 03/10/04 - Added a bash script to copy unix files to windows .txt format =)
BP - 03/10/04 - Added !part command...realized this ChangeLog is backwards...should be top with newest changes
NJ - 09/10/04 - Added the python interpreter line to top of ircbp.py
NJ - 09/10/04 - Made the configuration stuff bit better to look at!
NJ - 09/10/04 - Made some code more "tidy"
NJ - 09/10/04 - RELEASE - 0.1.0
NJ - 09/10/04 - Tag to /framework/tags/REL-0.1.0
NJ - 09/10/04 - Added a temporary README
NJ - 09/10/04 - Made REALNAME set by default to fix bug #2613 (Invalid IRC Parameters)
NJ - 10/10/04 - Made irclogin() much more simple
NJ - 10/10/04 - Added sendnickserv() so users can have their bot automatically identify to nickserv
NJ - 13/11/04 - Added remchan() to reverse addchan()
NJ - 13/11/04 - Added !list as a debugging tool (list channels the bot is on)
NJ - 13/11/04 - Fixed !part to fix bug #2614 (!part Parts the wrong channel)
NJ - 13/11/04 - Added ircbpconfig.py
NJ - 13/11/04 - All the "lists" (I call them arrays) are now held in the new module.
NJ - 13/11/04 - README fixed up.
NJ - 13/11/04 - Added svn:ignore *.pyc because we don't need to import compiled python modules into the repo)